@@ -82,21 +82,21 @@ static struct argp_option options[] = {
   ARGP_COMMON_OPTIONS_PRIVILEGE_LEVEL_ADMIN,
   ARGP_COMMON_OPTIONS_WORKAROUND_FLAGS,
   ARGP_COMMON_OPTIONS_DEBUG,
-  {"checkout", 'o', 0, 0, 
+  {"checkout", CHECKOUT_KEY, 0, 0, 
    "Fetch configuration information from the BMC.", 25},
-  {"commit", 'c', 0, 0, 
+  {"commit", COMMIT_KEY, 0, 0, 
    "Update configuration information to the BMC from a config file or key pairs.", 26},
-  {"diff", 'd', 0, 0, 
+  {"diff", DIFF_KEY, 0, 0, 
    "Show differences between the BMC and a config file or key pairs.", 27},
-  {"filename", 'f', "FILENAME", 0, 
+  {"filename", FILENAME_KEY, "FILENAME", 0, 
    "Specify a BMC config file for BMC checkout/commit/diff.", 28},
-  {"key-pair", 'k', "KEY-PAIR", 0, 
+  {"key-pair", KEYPAIR_KEY, "KEY-PAIR", 0, 
    "Specify KEY=VALUE pairs for checkout/commit/diff.", 29},
-  {"section", 'S', "SECTION", 0,
+  {"section", SECTIONS_KEY, "SECTION", 0,
    "Specify a SECTION for checkout.", 30},
-  {"listsections", 'L', 0, 0,
+  {"listsections", LIST_SECTIONS_KEY, 0, 0,
    "List available sections for checkout.", 31},
-  {"verbose",   'v', 0, 0,  
+  {"verbose", VERBOSE_KEY, 0, 0,  
    "Print additional detailed information.", 32},
   { 0, }
 };
